[gd_scene load_steps=3 format=3 uid="uid://c18nb25dtr28j"]

[ext_resource type="Script" path="res://scenes/ui/pause_menu/pause_menu.gd" id="1_m85b5"]
[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="2_1nx6m"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m85b5")

[node name="PauseMenuSlideout" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_1nx6m")
slide_edge = 2
slide_duration = 0.5
transition_type = 4
ease_type = 2

[node name="CPanel" type="PanelContainer" parent="PauseMenuSlideout"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuSlideout/CPanel"]
layout_mode = 2

[node name="BTN_Resume" type="Button" parent="PauseMenuSlideout/CPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resume"

[node name="BTN_Options" type="Button" parent="PauseMenuSlideout/CPanel/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="PauseMenuSlideout/CPanel/VBoxContainer"]
layout_mode = 2
text = "Quit to Main"

[connection signal="pressed" from="PauseMenuSlideout/CPanel/VBoxContainer/BTN_Resume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="PauseMenuSlideout/CPanel/VBoxContainer/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="PauseMenuSlideout/CPanel/VBoxContainer/BTN_Quit" to="." method="_on_btn_quit_pressed"]
